Fix LP list collapse arrow alignment

--- a/SCSS/Theme Rewrite/base/_lists.scss
+++ b/SCSS/Theme Rewrite/base/_lists.scss
@@ -177,7 +177,10 @@ li.is-collapsed .list-bullet:after,
     margin-inline-start: -2.2em;
     padding-inline-end: 0;
 }
-
+.markdown-source-view.mod-cm6 .cm-line.cm-line:not(.HyperMD-header):not(.HyperMD-task-line) .cm-fold-indicator .collapse-indicator {
+    right: .5rem;
+    padding-right: 0;
+}
 
 // .markdown-preview-view ul .list-collapse-indicator {
 //     padding-left: 1em;
